# random-poster

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  settings.yaml.example
conf/: settings.yaml.example
src/: main.rs  message.rs  random.rs  request.rs  settings.rs  weight.rs
