[package]
name = "post_random"
version = "1.0.0"
authors = []
edition = "2018"

[dependencies]
rand = "0.8"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.10.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.2"
indoc = "1.0"
